# agentkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agentkit/: __init__.py
agentkit/core/: __init__.py  agent.py  result.py  step.py
agentkit/eval/: __init__.py  harness.py  metrics.py
agentkit/llm/: __init__.py  claude.py  factory.py  gemini.py  ollama.py  openai.py  provider.py
agentkit/memory/: __init__.py  conversation.py  working.py
agentkit/observability/: __init__.py  cli.py  cost.py  tracer.py  viewer.py
agentkit/prompts/: __init__.py  system.py
agentkit/tools/: __init__.py  base.py  decorator.py  registry.py
docs/: design.md
examples/data_assistant/: README.md  __init__.py  agent.py  cli.py  seed_db.py  tools.py
examples/pipeline_doctor/: README.md  __init__.py  agent.py  backend.py  cli.py  tools.py
examples/repro_agent/: README.md  __init__.py  agent.py  cli.py  library.py  tools.py
examples/repro_agent/papers/: attention_is_all_you_need.md  docaware.md  few_useful_things.md
tests/: conftest.py  test_agent_loop.py  test_eval_harness.py  test_memory.py  test_observability.py  test_tools.py  test_viewer.py
tests/examples/: test_data_assistant_tools.py  test_pipeline_doctor_tools.py  test_repro_agent_tools.py
